tests/baselines/reference/protectedStaticClassPropertyAccessibleWithinSubclass2.errors.txt
tests/cases/conformance/classes/members/accessibility/protectedStaticClassPropertyAccessibleWithinSubclass2.ts(11,15): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
tests/cases/conformance/classes/members/accessibility/protectedStaticClassPropertyAccessibleWithinSubclass2.ts(19,15): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.


==== tests/cases/conformance/classes/members/accessibility/protectedStaticClassPropertyAccessibleWithinSubclass2.ts (2 errors) ====
    class Base {
        protected static x: string;
        static staticMethod() {
            this.x;         // OK, accessed within their declaring class
        }
    }
    
    class Derived1 extends Base {
        static staticMethod1() {
            this.x;         // OK, accessed within a class derived from their declaring class
            super.x;        // Error, x is not public
                  ~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
        }
    }
    
    class Derived2 extends Derived1 {
        protected static x: string;
        static staticMethod3() {
            this.x;         // OK, accessed within a class derived from their declaring class
            super.x;        // Error, x is not public
                  ~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
        }
    }